[tool.poetry]
name = "PyPullTrolley"
version = "0.1.0"
description = ""
authors = ["Rodrigo da Silva Guerra <rodrigo.guerra@furg.br>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
pygame = "^2.1.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"